<resources>
    <string name="app_name">ქართული კალკულატორი</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiple">*</string>
    <string name="commit">.</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
    <string name="div">/</string>
    <string name="_0table">0</string>
    <string name="clear">C</string>
    <string name="btn_about">О программе</string>
    <string name="about">Данная программа является собственностью Шалошвили Георгия Георгиевича™. Права на программу были переданы 12 июня 2020 года Кургановым Романом Васильевичем в качестве подарка на день рождение. ბედნიერი დაბადების დღე გენაცვალე!!!🇬🇪🍻🎂</string>
    <string name="btn_close">Спасибо Роману Васильевичу😜</string>
</resources>